--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Discordbot</title>
+<style>
+body {
+  background-color: black;
+  text-align: center;
+  color: white;
+}
+</style>
+<meta http-equiv="Refresh" content="0; url='https://teamcaladrius.com'" />
+</head>
+<body>
+Hello!
+</body>
+</html>
